src/test/ui/type/type-check/issue-40294.stderr
error[E0283]: type annotations required: cannot resolve `&'a T: Foo`
  --> $DIR/issue-40294.rs:5:1
   |
LL | / fn foo<'a,'b,T>(x: &'a T, y: &'b T)
LL | |     where &'a T : Foo,
LL | |           &'b T : Foo
LL | | {
LL | |     x.foo();
LL | |     y.foo();
LL | | }
   | |_^
   |
note: required by `Foo`
  --> $DIR/issue-40294.rs:1:1
   |
LL | trait Foo: Sized {
   | ^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
